// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DocumentSuggester /> should render 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="react-autowhatever-1"
    role="combobox"
    style="flex: 1 1 auto;"
  >
    <input
      aria-autocomplete="list"
      aria-controls="react-autowhatever-1"
      autocomplete="off"
      id="main-search-input"
      name="q"
      placeholder="document suggester placeholder"
      type="search"
      value="foo"
    />
    <div
      class="sc-jtiXyc epYyJZ"
      id="react-autowhatever-1"
      role="listbox"
    />
  </div>
</div>
`;

exports[`<DocumentSuggester /> should render suggestions 1`] = `
<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="react-autowhatever-1"
    role="combobox"
    style="flex: 1 1 auto;"
  >
    <input
      aria-autocomplete="list"
      aria-controls="react-autowhatever-1"
      autocomplete="off"
      id="main-search-input"
      name="q"
      placeholder="search foo"
      type="search"
      value="foo"
    />
    <div
      class="sc-jtiXyc epYyJZ"
      id="react-autowhatever-1"
      role="listbox"
    >
      <ul
        role="listbox"
        style="background: white; border: 1px solid silver; border-radius: 3px; box-shadow: 0 10px 10px -10px #b7bcdf; left: 0px; margin: .5em 0px 0px 0px; padding: 0px 0px 0px 0px; position: absolute; right: 0px;"
      >
        <li
          aria-selected="false"
          data-suggestion-index="0"
          id="react-autowhatever-1--item-0"
          role="option"
          style="border-radius: 3px; cursor: pointer; line-height: 2rem; list-style-type: none; padding: 5px;"
        >
          <div
            class="sc-dvUynV ddAQyb"
          >
            <div
              class="sc-kTCsyW ebCCXD"
            >
              <strong>
                foo
              </strong>
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          data-suggestion-index="1"
          id="react-autowhatever-1--item-1"
          role="option"
          style="border-radius: 3px; cursor: pointer; line-height: 2rem; list-style-type: none; padding: 5px;"
        >
          <div
            class="sc-dvUynV ddAQyb"
          >
            <div
              class="sc-kTCsyW ebCCXD"
            >
              <strong>
                foo
              </strong>
              bar
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          data-suggestion-index="2"
          id="react-autowhatever-1--item-2"
          role="option"
          style="border-radius: 3px; cursor: pointer; line-height: 2rem; list-style-type: none; padding: 5px;"
        >
          <div
            class="sc-dvUynV ddAQyb"
          >
            <div
              class="sc-kTCsyW ebCCXD"
            >
              <strong>
                foo
              </strong>
               bar ?
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          data-suggestion-index="3"
          id="react-autowhatever-1--item-3"
          role="option"
          style="border-radius: 3px; cursor: pointer; line-height: 2rem; list-style-type: none; padding: 5px;"
        >
          <div
            class="sc-dvUynV ddAQyb"
          >
            <div
              class="sc-kTCsyW ebCCXD"
            >
              <strong>
                foo
              </strong>
               bazzz
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
